--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,11 +1,92 @@
 * {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
-	font-family: sans-serif;
+	font-family: 'Atkinson Hyperlegible', sans-serif;
 }
 
-.success {
-	color: rgb(61, 150, 61);
+.container-title{
+	display: flex;
+	flex-direction: column;
+	background-color: #6BA3FF;
+	text-align: center;
+
+	h1{
+		margin: 20px 0 0 0;
+		font-size: 2.3rem;
+	}
+
+	h3{
+		margin: 20px 0;
+	}
 }
-.fail {
-	color: red;
+
+.container{
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+	background-color: #2C3E50;
+	align-items: center;
+
+	p.paragraph{
+		text-align: center;
+		width: 90%;
+		padding: 25px 0;
+		color: white;
+		font-weight: bold;
+	}
+
+	.activity-container{
+		display: flex;
+		width: 320px;
+		justify-content: space-between;
+	}
+
+	.result{
+		justify-content: center;
+		margin-top: 30px;
+		background-color: white;
+		padding: 20px;
+		border-radius: 10px;
+
+	}
+
+	.alert{
+		font-weight: bold;
+		font-size: 1.3rem;
+		color: #6BA3FF;
+		text-align: center;
+	}
+
+	.show-activity{
+		font-weight: bold;
+		margin: 10px 0;
+		text-align: center;
+	}
+
+	.boton{
+		width: 120px;
+		height: 30px;
+		border: none;
+		border-radius: 10px;
+		background-color: #6BA3FF;
+		font-weight: bold;
+		cursor: pointer;
+	}
+
+	.copy{
+		color: white;
+		font-weight: bold;
+	}
+
+	.activity-select{
+    border: none;
+  	font-size: 14px;
+   	height: 30px;
+   	padding: 5px;
+   	width: 150px;
+		&:focus{
+			outline: none;
+		}
+	}
 }
